[MOSIP-32064]
Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>